[package]
name = "random-password"
version = "0.1.0"
authors = ["Bhavik Limani <limanibhavik@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Simple Random Number Password"
homepage = "https://github.com/LimaniBhavik/Random-Number-Password"
repository = "https://github.com/LimaniBhavik/Random-Number-Password"
keywords = ["password", "random-number", "random-number-password"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"



