[package]
name = "random-password"
version = "0.1.1"
authors = ["Bhavik Limani <limanibhavik@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Simple Random Number Password"
homepage = "https://github.com/LimaniBhavik/Random-Password"
repository = "https://github.com/LimaniBhavik/Random-Password"
keywords = ["password", "generate", "number"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"



